added working score system

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <button id="paper">paper</button>
     <button id="scissors">scissors</button>
 
+    <div id="divScore">current score</div>
 </body>
 </html> 
