added a game to 5

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissors">scissors</button>
+    <div id="btncontainer">
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
+    </div>
 
     <div id="divScore">current score</div>
 </body>
