it resets after one of them reach 5

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="btncontainer">
+    <div id="container">
         <button id="rock">rock</button>
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
     </div>
 
-    <div id="divScore">current score</div>
+    <div id="divScore">Select one of the options</div>
+    <div id="btn"></div>
 </body>
 </html> 
