added some styling

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissors">scissors</button>
-    </div>
+    <div class="main">
+    <img id="backg" src="./images/stock-vector.jpg">      
+        <div id="container">
+            <button id="rock">rock</button>
+            <button id="paper">paper</button>
+            <button id="scissors">scissors</button>
+        </div>
 
-    <div id="divScore">Select one of the options</div>
-    <div id="btn"></div>
+        <div id="score">
+            <div id="divScore">Choose your weapon</div>
+            <div id="btn"></div>
+        </div>
+    </div>
+    
 </body>
 </html> 
